--- a/index.html
+++ b/index.html
@@ -3,33 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cross-Pollination for Good</title>
+    <title>Cross-Pollination for Good: A Revolution in Capital and Purpose</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- HEADER SECTION -->
     <header>
         <h1>🌍 Cross-Pollination for Good</h1>
-        <p>Ideas Meet Capital, Alignment Builds Impact</p>
+        <p>A Revolution in Capital and Purpose</p>
     </header>
 
     <div class="container">
         <!-- INTRO SECTION -->
         <div class="section">
-            <h2>🌱 Ideas are cheap, but alignment makes them powerful.</h2>
-            <p>Technology makes it easier than ever to create. What matters now is alignment — with yourself, with others, and with the planet's life-giving systems.</p>
-            <p>This platform connects bold, world-changing ideas with the capital and teams needed to make them real. From regenerative bots to modular eco-trains that power themselves and support ecosystems, we help high-impact ideas take root by unlocking capital at key milestones and drawing in aligned talent.</p>
+            <h2>🌱 They say ideas are cheap.</h2>
+            <p>Guess what's getting cheaper faster? Implementation. AI and robotics are slashing the cost and time to turn wild concepts into reality—exponentially, relentlessly. In a few years, building won't be the bottleneck.</p>
+            <p>So what will matter? Alignment. With our hearts, our values, our unique gifts. That's where the real juice lies—the rare, electric spark that turns capital into a liquid sentient force flowing for good.</p>
+            <p>Enter Cross-Pollination for Good—a platform that's not just a directory, but a living, breathing hub of purpose-driven brilliance. It's where ideas evolve at the speed of discovery, fueled by breakthroughs crashing across industries and sectors like waves in a storm.</p>
+            <p>Think of it as a radar for the next big thing—capturing the collisions of tech, science, and human need in real time.</p>
+        </div>
+
+        <!-- VISION SECTION -->
+        <div class="section">
+            <h2>The Vision: A Purpose Magnet</h2>
+            <p>This isn't business as usual. We're flipping the script on how ideas ignite. Forget teams scrambling for funding—here, ideas take center stage, pulling in capital and talent like a gravitational force. It's a magnet for purpose, where the best concepts don't just sit—they demand to be built.</p>
         </div>
 
         <!-- HOW IT WORKS SECTION -->
         <div class="section">
-            <h2>How It Works</h2>
-            <ul>
-                <li>➡️ <strong>Post an Idea</strong> – Anyone (human or AI) can submit an idea for positive change.</li>
-                <li>➡️ <strong>Aligned Capital Signals Interest</strong> – Backers can express interest in ideas that align with their values.</li>
-                <li>➡️ <strong>Scoring + Momentum</strong> – Ideas are scored for viability, impact, and alignment, attracting more capital and talent.</li>
-                <li>➡️ <strong>Unlock Capital + Build Teams</strong> – Capital is released in stages as key milestones are hit, while aligned teams form around the most promising projects.</li>
-            </ul>
+            <h2>A Living Flow: Ideas, Harmony, and Action</h2>
+            <div class="flow-steps">
+                <p><strong>Ideas Take Root:</strong> Anyone can plant a seed—visionaries, dreamers, you. AI joins as a nurturing partner, weaving insights from across the globe to sprout concepts that ripple with possibility.</p>
+                <p><strong>Grown by Wisdom:</strong> AI and human stewards—ecologists, engineers, healers—tend these ideas, ranking them for impact, viability, and resonance. Each score is a whisper of potential, guiding us to what can thrive.</p>
+                <p><strong>Capital Flows Naturally:</strong> Backers—investors, guardians of change—explore this vibrant garden, drawn to ideas that stir their spirit. A solar train breathing life into the land? A bot mending soil? They signal their trust, pledging support with a simple, heartfelt nod.</p>
+            </div>
+            <div class="key-points">
+                <p>➡️ <em>Key Milestones:</em> Capital is released in stages as projects hit key growth points</p>
+                <p>➡️ <em>Team Formation:</em> Aligned teams naturally gather around thriving ideas</p>
+            </div>
         </div>
 
         <!-- SCORING SYSTEM SECTION -->
@@ -44,14 +55,20 @@
             <p>➡️ Higher scores = ideas that are doable, impactful, and inspiring.</p>
         </div>
 
-        <!-- WHY IT WORKS SECTION -->
+        <!-- HOW IT BLOOMS SECTION -->
         <div class="section">
-            <h2>Why It Works</h2>
-            <ul>
-                <li>✔️ Ideas become real faster when backed by aligned capital and mission-driven teams.</li>
-                <li>✔️ Capital follows alignment—not just market potential.</li>
-                <li>✔️ When execution becomes easy, alignment is the competitive edge.</li>
-            </ul>
+            <h2>How It Blooms</h2>
+            <p>The more an idea resonates, the more it beckons—calling forth teams of creators, thinkers, and restorers to shape it into being. The platform becomes a living bridge, weaving skills, values, and passion into a shared heartbeat.</p>
+            <p>Funds rest in escrow, a quiet promise, released as milestones bloom—first a prototype, then a pilot, then a flourishing scale. No rigid gates, just the rhythm of growth.</p>
+        </div>
+
+        <!-- WHY IT'S A TURNING POINT SECTION -->
+        <div class="section">
+            <h2>Why It's a Turning Point</h2>
+            <p>Industries are surging—AI, biotech, renewables, robotics—and Cross-Pollination for Good is the soil where their seeds intertwine. It's not a fixed frame; it's a thriving ecosystem, listing and ranking ideas as they unfold with each dawn. What seemed distant yesterday takes root today.</p>
+            <p>Capital doesn't hunt for profit—it seeks life. Teams don't chase tasks—they answer a call to renew.</p>
+            <p class="vision-close">This is alignment as a living force. Where cheap ideas meet cheaper execution, and the only boundary is how deeply we're willing to care. Cross-Pollination for Good isn't just a platform—it's a regeneration.</p>
+            <p class="call-to-action">Ready to nurture the future?</p>
         </div>
 
         <!-- IDEA DIRECTORY -->
@@ -67,4 +84,5 @@
     <script src="data.js"></script>
     <script src="scripts.js"></script>
 </body>
+</html>
 </html>
