--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
         <!-- HOW IT WORKS SECTION -->
         <div class="section">
             <h2>A Living Flow: Ideas, Harmony, and Action</h2>
-            <div class="flow-steps">
-                <p><strong>Ideas Take Root:</strong> Anyone can plant a seed—visionaries, dreamers, you. AI joins as a nurturing partner, weaving insights from across the globe to sprout concepts that ripple with possibility.</p>
-                <p><strong>Grown by Wisdom:</strong> AI and human stewards—ecologists, engineers, healers—tend these ideas, ranking them for impact, viability, and resonance. Each score is a whisper of potential, guiding us to what can thrive.</p>
-                <p><strong>Capital Flows Naturally:</strong> Backers—investors, guardians of change—explore this vibrant garden, drawn to ideas that stir their spirit. A solar train breathing life into the land? A bot mending soil? They signal their trust, pledging support with a simple, heartfelt nod.</p>
-            </div>
+            <p><strong>Ideas Take Root:</strong> Anyone can plant a seed—visionaries, dreamers, you. AI joins as a nurturing partner, weaving insights from across the globe to sprout concepts that ripple with possibility.</p>
+            <p><strong>Grown by Wisdom:</strong> AI and human stewards—ecologists, engineers, healers—tend these ideas, ranking them for impact, viability, and resonance. Each score is a whisper of potential, guiding us to what can thrive.</p>
+            <p><strong>Capital Flows Naturally:</strong> Backers—investors, guardians of change—explore this vibrant garden, drawn to ideas that stir their spirit. A solar train breathing life into the land? A bot mending soil? They signal their trust, pledging support with a simple, heartfelt nod.</p>
             <div class="key-points">
-                <p>➡️ <em>Key Milestones:</em> Capital is released in stages as projects hit key growth points</p>
-                <p>➡️ <em>Team Formation:</em> Aligned teams naturally gather around thriving ideas</p>
+                <p><strong>Key Milestones:</strong> Capital is released in stages as projects hit key growth points</p>
+                <p><strong>Team Formation:</strong> Aligned teams naturally gather around thriving ideas</p>
             </div>
         </div>
 
@@ -47,12 +45,15 @@
         <div class="section">
             <h2>Scoring System</h2>
             <p>Each idea is scored out of 100 based on:</p>
-            <ul>
-                <li>✅ <strong>Viability (0-40):</strong> Can it work with current tech, infrastructure, and funding?</li>
-                <li>🌍 <strong>Impact (0-40):</strong> What's the potential payoff for people, planet, or systems?</li>
-                <li>💖 <strong>Alignment Appeal (0-20):</strong> Does it resonate with values like sustainability, equity, or regeneration?</li>
+            <ul class="elegant-list">
+                <li><strong>Viability</strong><div class="score-description"><span class="score-range">(0-40)</span><br>
+                    Can it work with current tech, infrastructure, and funding?</div></li>
+                <li><strong>Impact</strong><div class="score-description"><span class="score-range">(0-40)</span><br>
+                    What's the potential payoff for people, planet, or systems?</div></li>
+                <li><strong>Alignment Appeal</strong><div class="score-description"><span class="score-range">(0-20)</span><br>
+                    Does it resonate with values like sustainability, equity, or regeneration?</div></li>
             </ul>
-            <p>➡️ Higher scores = ideas that are doable, impactful, and inspiring.</p>
+            <p class="score-note">Higher scores indicate ideas that are doable, impactful, and inspiring.</p>
         </div>
 
         <!-- HOW IT BLOOMS SECTION -->
@@ -84,5 +85,4 @@
     <script src="data.js"></script>
     <script src="scripts.js"></script>
 </body>
-</html>
 </html>
