--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- IDEA DIRECTORY -->
         <div class="section directory">
-            <h2>Idea Directory</h2>
+            <h2>🐿️ Idea Directory</h2>
             <div class="idea-directory">
                 <!-- Idea cards will be dynamically inserted here by scripts.js -->
             </div>
